...
    var title: LocalizedStringKey {
        switch self {
        case .premium: "Lume Pro"
        case .profiles: "Profiles"
        case .playlists: "Playlists"
        case .epg: "TV Guide"
        case .library: "Library"
        case .home: "Home"
        case .liveTV: "Live TV"
        case .sports: "Sports"
        case .appearance: "Appearance"
        case .player: "Player"
        case .downloads: "Downloads"
...
